hopefully now fixed the overflow

--- a/scss/_projectsOverlay.scss
+++ b/scss/_projectsOverlay.scss
@@ -100,6 +100,7 @@
   grid-area: main;
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .project-overlay-photo {
